added load_recipe by id
